Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-11902

QGraphicsTextItem does not emit linkActivated when clicked [reg].

XMLWordPrintable

      When the LinksAccessibleByMouse flag is set on a QGraphicsTextItem it should emit the linkActivated signal when clicked, but it does not.
      This is a regression from 4.5.3.

      Please use the attached example to reproduce.

      I also noticed that the item never gets the mouseReleaseEvent. If you override the QGraphicsTextItem and make sure to accept the mousePressEvent the signal is emitted correctly.

        1. main.cpp
          1.0 kB
          Martin Petersson
        2. patch.diff
          0.5 kB
          Martin Petersson
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            xcm Martin Petersson (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes