Fix QGraphicsTextItem does not emit linkActivated when clicked [reg]

When adding html (richtext) link to QGraphicsTextItem item, clicking
link should emit linkActivated signal. Error was that mousePressEvent
were always ignored if Qt::TextInteractionFlags were something else
than Qt::TextSelectableByMouse and/or Qt::TextEditable.
Fixed by checking if link clicked by mouse contains contains anchor,
then do not ignore mousePressEvent for item.

Task-number: QTBUG-11902